# atom-analyzer

./: Cargo.toml
.github/workflows/: rust.yml
atom_derive/: Cargo.toml
atom_derive/src/: lib.rs
src/: ftyp.rs  lib.rs  main.rs
src/atom/: ctts.rs  dinf.rs  dref.rs  edts.rs  elst.rs  free.rs  ftyp.rs  hdlr.rs  mdat.rs  mdhd.rs  mdia.rs  minf.rs  mod.rs  moov.rs  mvhd.rs  other.rs  smhd.rs  stbl.rs  stco.rs  stsc.rs  stsd.rs  stss.rs  stsz.rs  stts.rs  tkhd.rs  trak.rs  tref.rs  udta.rs  vmhd.rs  wide.rs
src/element/: mod.rs  qtfile_datetime.rs  qtfile_matrix.rs
src/qtfile/: mod.rs
tests/: test_qtfile.rs
tests/samples/: camouflage_vga.mov
