[package]
name = "atom-analyzer"
version = "0.1.0"
authors = ["Katsuki Kobayashi <rare@tirasweel.org>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
byteorder = "1.3"
chrono = "0.4"
lazy_static = "1.4.0"
time = "0.1"
fixed = "0.5"
thiserror = "1.0"
mopa = "0.2.2"
cpp_core = { version = "0.6.0", optional = true }
qt_core = { version = "0.5.0", optional = true }
qt_widgets = { version = "0.5.0", optional = true }

atom_derive = { path = "./atom_derive" }

[features]
gui = ["cpp_core", "qt_core", "qt_widgets"]
