[package]
name = "atom_derive"
version = "0.1.0"
authors = ["Katsuki Kobayashi <rare@tirasweel.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["full", "extra-traits"] }
quote = "1.0.9"
